# StakeBot-PredictorSoftware

./: .env.example  .gitignore  ADVANCED_RESEARCH_INTEGRATION_PLAN.md  AUDIT_EVIDENCE_GUIDE.md  AUDIT_REPORT.md  BROKER_SAFETY_GUIDE.md  Dockerfile  EXISTING_FEATURES_PRESERVED.md  FINAL_CTO_READINESS_REPORT.md  FINAL_PAPER_APP.md  GO_LIVE_NO_GO_CHECKLIST.md  INCIDENT_RESPONSE_PLAN.md  KILL_SWITCH_RUNBOOK.md  LIVE_TRADING_NO_GO_REASONS.md  MISSING_COMPONENTS.md  Makefile  OPERATIONAL_RUNBOOK.md  OPERATIONAL_VALIDATION_PLAN.md  PAPER_TRADING_GUIDE.md  PRODUCTION_RUNBOOK.md  README.md  README_ENV_SETUP.md  SAFE_UPDATE_PLAN.md  SHADOW_TRADING_GUIDE.md  SYSTEM_STATUS_SUMMARY.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
build_backend/: stakebot_build_backend.py
docs/: api_spec.yaml  architecture.md  database_schema.sql  deployment_guide.md  final_readiness_report.md  performance_review.md  repository_audit.md  security_review.md
infrastructure/: docker-compose.yml
scripts/: apply_final_legacy_fixes.py  apply_premium_dashboard_ui.py  basic_secret_scan.py  check_dashboard_ui.py  check_manual_review_gate.py  diagnose_live_price.py  export_audit_json.py  export_evidence_pack.py  fix_ui_restore_functional_dashboard.py  generate_daily_report.py  import_smoke.py  init_db.py  no_live_order_static_scan.py  patch_phase10_audit_log.py  patch_phase10_openai_auditor.py  patch_phase11_readiness_gates.py  patch_phase11_safe_trade_plan.py  patch_phase13_5_fast_refresh_paper_ui.py  patch_phase13_6_paper_lot_average.py  run_local.py  (+15 more)
(+154 files in other folders)
