[build-system]
requires = []
build-backend = "stakebot_build_backend"
backend-path = ["build_backend"]

[project]
name = "stakebot-predictorsoftware"
version = "0.1.0"
description = "Institutional quantitative trading platform foundation with governance-first signal gating."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "StakeBot PredictorSoftware Contributors" }]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
