[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stakebot-predictorsoftware"
version = "0.1.0"
description = "Institutional quantitative trading platform foundation with governance-first signal gating."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "StakeBot PredictorSoftware Contributors" }]
dependencies = [
  "kiteconnect>=5,<6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
